# pork

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
cmake/: config.hpp.in  pork-config.cmake.in
cmake/pork-cmake-modules/: pork-build-tree-macros.cmake  pork-platform-macros.cmake
cmake/scripts/: generate_project.cmake  make_project.cmake
cmake/toolchains/: mingw-x86.cmake  mingw-x86_64.cmake
dependencies/: CMakeLists.txt
sources/: CMakeLists.txt
sources/base/: CMakeLists.txt
sources/base/src/: Application.cpp  Application.hpp  BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  Configuration.hpp  Context.hpp  Exception.cpp  Exception.hpp  Initializable.cpp  Initializable.hpp  Logging.cpp  Logging.hpp  Service.cpp  Service.hpp  StrUtils.cpp  StrUtils.hpp  TypeInfo.cpp  TypeInfo.hpp
sources/base/src/pork/base/: Application.cpp  Application.hpp  Config.cpp  Config.hpp  Context.cpp  Context.hpp  Service.hpp  ValueStore.cpp  ValueStore.hpp
sources/context/: CMakeLists.txt
sources/context/src/: CMakeLists.txt  Context.cpp  Service.hpp
sources/core/: CMakeLists.txt
sources/core/src/: CMakeLists.txt
sources/core/src/pork/core/: Errors.cpp  Errors.hpp  Exception.cpp  Exception.hpp  Logging.cpp  Logging.hpp  StrUtils.cpp  StrUtils.hpp  TypeInfo.cpp  TypeInfo.hpp
sources/demo/: CMakeLists.txt
sources/demo/src/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
sources/mc/: CMakeLists.txt
sources/mc/src/: App.hpp  main.cpp
sources/pong/: CMakeLists.txt
sources/pong/src/: App.cpp  App.hpp  Ball.cpp  Ball.hpp  CMakeLists.txt  Field.hpp  Paddle.cpp  Paddle.hpp  Score.hpp  main.cpp
