# if(PORK_BUILD_UT)
#     add_subdirectory(Catch2)
#     set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" PARENT_SCOPE)
#     include(CTest)
#     include(Catch)
# endif()

if(PORK_SDL_BUNDLED)
    set(SDL_SHARED OFF)
    set(SDL_STATIC ON)
    add_subdirectory(SDL)
else()
    find_package(SDL >=3.0.0 REQUIRED)
endif()

if(PORK_FMT_BUNDLED)
    add_subdirectory(fmt)
else()
    find_package(fmt 7.0.3...9.1.0 REQUIRED)
endif()

if(PORK_SPDLOG_BUNDLED)
    # set(SPDLOG_FMT_EXTERNAL TRUE)
    add_subdirectory(spdlog)
else()
    find_package(spdlog 1.7.1...1.11.0 REQUIRED)
endif()

if(PORK_PUGIXML_BUNDLED)
    add_subdirectory(pugixml)
else()
    find_package(pugixml REQUIRED)
endif()
